--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\rose odiwuor\Desktop\web development\HTML\Annotation 2020-10-13 195748.png" alt="brian oduor ochieng atletico madrid"></td>
+      <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f4/Atletico_Madrid_2017_logo.svg/1200px-Atletico_Madrid_2017_logo.svg.png" width="130" ></td>
       <td>
         <h1><b><I>Brian Oduor Ochheng</I></b></h1>
-        <p>Fpl club manager <a href="https://fantasy.premierleague.com/entry/5400422/event/4"><em><b>The Brazen Wankers</b></em></a> </p>
-        <p>Atlético Madrid sporting director</p>
+        <p>Fpl club manager <a href="https://fantasy.premierleague.com/entry/5400422/event/5/"><em><b>The Brazen Wankers</b></em></a> </p>
+        <p>Atlético Madrid sporting propagandist</p>
       </td>
     </tr>
   </table>
+
+  </video>
 
   <hr>
   <h2><b><i>Fpl experience</i></b></h2>
@@ -32,13 +34,13 @@
     <th>Dates</th>
     <th>Achievements</th>
     <tr>
-      <td>2013-2016</td>
-      <td>Studied statistics <a href="https://en.wikipedia.org/wiki/Maseno_University">Maseno
+      <td>2013-2017</td>
+      <td>Wasted my life<a href="https://en.wikipedia.org/wiki/Maseno_University">Maseno
           university</a></td>
     </tr>
     <tr>
-    <td>2017</td>
-    <td>Football business aquisition magager</td>
+    <td>2018</td>
+    <td>Football investment analy(Gambler)</td>
   </tr>
 
   </table>
