--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <th>Achievements</th>
     <tr>
       <td>2013-2017</td>
-      <td>Wasted my life<a href="https://en.wikipedia.org/wiki/Maseno_University">Maseno
+      <td>Wasted my life at<a href="https://en.wikipedia.org/wiki/Maseno_University">Maseno
           university</a></td>
     </tr>
     <tr>
     <td>2018</td>
-    <td>Football investment analy(Gambler)</td>
+    <td>Football investment analyst(Gambler)</td>
   </tr>
 
   </table>
