--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>❄BRIAN MANAGARIAL CAREER</title>
+  <title>❄BRIANs FPL MANAGARIAL CAREER</title>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f4/Atletico_Madrid_2017_logo.svg/1200px-Atletico_Madrid_2017_logo.svg.png" width="130" ></td>
       <td>
-        <h1><b><I>Brian Oduor Ochheng</I></b></h1>
+        <h1><b><I>Brian Odush Ochheng</I></b></h1>
         <p>Fpl club manager <a href="https://fantasy.premierleague.com/entry/5400422/event/5/"><em><b>The Brazen Wankers</b></em></a> </p>
         <p>Atlético Madrid sporting propagandist</p>
       </td>
