--- a/contacts.html
+++ b/contacts.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>contacts</title>
+  <title>CONTACT ME</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body style="background-colour:blue;">
   <h2><b><i>Contacts</i></b></h2>
   <ul type="i">
     <li>brayanbroni@gmail.com</li>
@@ -16,10 +17,10 @@
   <hr>
   <form  action="mailto:brayanbrioni@gmail.com" method="post"enctype="text/plain">
     <label>Your motherfucking name</label>
-    <input type="text" name="Yourmotherfuckingname" value=""><br>
+    <input type="text" name="Yourmotherfuckingname" value=""><br><br>
 
     <label>Your Email</label>
-    <input type="email" name="YourEmail" value=""><br>
+    <input type="email" name="YourEmail" value=""><br><br>
     <label>Your message:</label><br>
     <textarea name="Yourmessage" rows="10" cols="30"></textarea>
     <input type="submit" name="">
