--- a/hobies.html
+++ b/hobies.html
@@ -5,6 +5,19 @@
   <meta charset="utf-8">
   <title>My Hobbies</title>
 <link rel="stylesheet" href="css/styles.css">
+<style>
+
+  body {
+    background-color: white;
+  }
+  text {
+    font-size: 200PX;
+  }
+  img {
+  height: 130px;
+  width: 130px;
+  }
+    </style>
 </head>
 
 <body>
